--- a/sq/mobile/android/chrome/pippki.properties
+++ b/sq/mobile/android/chrome/pippki.properties
@@ -29,13 +29,13 @@ certmgr.title=Certificate Details
 # These strings are stolen from security/manager/locales/en-US/chrome/pippki/certManager.dtd
 certmgr.subjectinfo.label=Lëshuar Për
 certmgr.issuerinfo.label=Lëshuar nga
-certmgr.validity.label=Vlefshmëri
+certmgr.periodofvalidity.label=Kohë Vlefshmërie
 certmgr.fingerprints.label=Shenja gishtash
 certmgr.certdetail.cn=Emër i Rëndomtë (ER)
 certmgr.certdetail.o=Organizëm (O)
 certmgr.certdetail.ou=Njësi Organizative (OU)
 certmgr.certdetail.serialnumber=Numër Serial
+certmgr.certdetail.sha256fingerprint=Shenja gishtash SHA-256
 certmgr.certdetail.sha1fingerprint=Shenja gishtash SHA1
-certmgr.certdetail.md5fingerprint=Shenja gishtash MD5
-certmgr.issued=Lëshuar Më
+certmgr.begins=Fillon Më
 certmgr.expires=Skadon Më
