--- a/nb-NO/dom/chrome/accessibility/AccessFu.properties
+++ b/nb-NO/dom/chrome/accessibility/AccessFu.properties
@@ -157,6 +157,7 @@ statePressed     =    trykt
 stateExpanded    =    ekspandert
 stateCollapsed   =    sammenslått
 stateUnavailable =    utilgjengelig
+stateReadonly    =    bare lesing
 stateRequired    =    nødvendig
 stateTraversed   =    besøkt
 stateHasPopup    =    har sprettopp
