--- a/nb-NO/security/manager/chrome/pipnss/nsserrors.properties
+++ b/nb-NO/security/manager/chrome/pipnss/nsserrors.properties
@@ -122,6 +122,18 @@ SSL_ERROR_NEXT_PROTOCOL_DATA_INVALID=SSL mottok ugyldig NPN utvidelsesdata.
 SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_SSL2=SSL-funksjonen er ikke støttet for SSL 2.0-tilkoblinger.
 SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_SERVERS=SSL-funksjonen er ikke støttet for servere.
 SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_CLIENTS=SSL-funksjonen er ikke støttet for klienter.
+SSL_ERROR_INVALID_VERSION_RANGE=SSL-versjonsområdet er ikke gyldig.
+SSL_ERROR_CIPHER_DISALLOWED_FOR_VERSION=SSL-motparten valgte en chiffreringssamling som ikke er tillatt for denne protokollversjonen.
+SSL_ERROR_RX_MALFORMED_HELLO_VERIFY_REQUEST=SSL mottok en ugyldig Hello Verify Request-håndhilsen.
+SSL_ERROR_RX_UNEXPECTED_HELLO_VERIFY_REQUEST=SSL mottok en uventet Hello Verify Request-håndhilsen.
+SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_VERSION=SSL-funksjonen er ikke støttet i denne protokollversjonen.
+SSL_ERROR_RX_UNEXPECTED_CERT_STATUS=SSL mottok en uventet Certificate Status-håndhilsen.
+SSL_ERROR_UNSUPPORTED_HASH_ALGORITHM=Ustøttet hash-algoritme brukt av TLS-motparten.
+SSL_ERROR_DIGEST_FAILURE=Digest-funksjon feilet.
+SSL_ERROR_INCORRECT_SIGNATURE_ALGORITHM=Feil signaturalgoritme angitt i et digitalt signert element.
+SSL_ERROR_NEXT_PROTOCOL_NO_CALLBACK=Den neste protokollforhandlingsutvidelsen var påslått, men tilbakekallet ble fjernet før den trengtes.
+SSL_ERROR_NEXT_PROTOCOL_NO_PROTOCOL=Serveren støtter ingen protokoller som klienten annonserer i ALPN-utvidelsen.
+SSL_ERROR_INAPPROPRIATE_FALLBACK_ALERT=Serveren avviste håndhilsenen fordi klienten nedgraderte til en lavere TLS-versjon enn det serveren støtter.
 SEC_ERROR_IO=En I/O-feil oppstod under sikkerhetsautorisasjon.
 SEC_ERROR_LIBRARY_FAILURE=feil i sikkerhetsbibliotek.
 SEC_ERROR_BAD_DATA=sikkehetsbibliotek: mottok ugyldig data.
