[sl] update from Pootle (thunderbird)

--- a/sl/editor/ui/chrome/composer/editor.properties
+++ b/sl/editor/ui/chrome/composer/editor.properties
@@ -37,13 +37,13 @@ InputError=Napaka
 Alert=Opozorilo
 CantEditFramesetMsg=Sestavljalnik ne more urejati niza okvirjev HTML oziroma strani z okvirji v besedilu. Za nize okvirjev poskusite urediti stran za vsak okvir posebej. Za strani z okvirji iframe shranite kopijo strani in odstranite oznako <iframe>.
 CantEditMimeTypeMsg=Te vrste strani ni mogoče urejati.
-CantEditDocumentMsg=Te strani iz neznanega vzroka ni mogoče urejati,
+CantEditDocumentMsg=Te strani iz neznanega vzroka ni mogoče urejati.
 BeforeClosing=pred zapiranjem
 BeforePreview=pred ogledom strani v brskalniku
 BeforeValidate=pred preverjanjem dokumenta
 # LOCALIZATION NOTE (SaveFilePrompt, PublishPrompt): Don't translate %title% and %reason% (this is the reason for asking user to close, such as "before closing")
-SaveFilePrompt=Shrani spremembe v "%title%" %reason%? \u0020
-PublishPrompt=Shrani spremembe v "%title%" %reason%? \u0020
+SaveFilePrompt=Shrani spremembe v "%title%" %reason%?\u0020
+PublishPrompt=Shrani spremembe v "%title%" %reason%?\u0020
 SaveFileFailed=Shranjevanje datoteke je spodletelo!
 
 # Publishing error strings:
@@ -52,10 +52,10 @@ FileNotFound=Datoteke %file% ni bilo mogoče najti.
 SubdirDoesNotExist=Podmapa "%dir%" ne obstaja na tem strežniku ali pa je ime datoteke "%file%" že uporablja druga podmapa.
 FilenameIsSubdir=Ime datoteke %file% že uporablja druga podmapa.
 ServerNotAvailable=Strežnik ni na voljo. Preverite svojo povezavo in poskusite znova kasneje.
-Offline=Trenutno ste brez povezave. Za delo s povezavo kliknite ikono poleg spodnjega desnega roba v kateremkoli oknu.
+Offline=Trenutno ste brez povezave. Za delo s povezavo kliknite ikono poleg spodnjega desnega kota kateregakoli okna.
 DiskFull=Na disku ni dovolj prostora za shranjevanje "%file%".
 NameTooLong=Ime datoteke ali podmape je predolgo.
-AccessDenied=Nimate pravic objavljanja na tem mestu.
+AccessDenied=Za objavljanje na tem mestu nimate dovoljenja.
 UnknownPublishError=Pri objavljanju je prišlo do neznane napake .
 PublishFailed=Objavljanje ni uspelo.
 PublishCompleted=Objavljanje zaključeno.
