--- a/nb-NO/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/nb-NO/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -97,8 +97,19 @@ quit-button.tooltiptext.linux2 = Avslutt %1$S (%2$S)
 # %2$S is the keyboard shortcut
 quit-button.tooltiptext.mac = Avslutt %1$S (%2$S)
 
+loop-call-button2.label = Start en samtale
+loop-call-button2.tooltiptext = Start en samtale
+
+social-share-button.label = Del denne siden
+social-share-button.tooltiptext = Del denne siden
+
 panic-button.label = Glem
 panic-button.tooltiptext = Glem deler av nettleserhistorikken
 
-loop-call-button.label = Inviter noen til å prate
-loop-call-button.tooltiptext = Inviter noen til å prate
+web-apps-button.label = Apper
+web-apps-button.tooltiptext = Oppdag apper
+
+# LOCALIZATION NOTE(devtools-webide-button.label, devtools-webide-button.tooltiptext):
+# widget is only visible after WebIDE has been started once (Tools > Web Developers > WebIDE)
+devtools-webide-button.label = WebIDE
+
