--- a/nb-NO/browser/chrome/browser/browser.properties
+++ b/nb-NO/browser/chrome/browser/browser.properties
@@ -103,13 +103,6 @@ popupShowPopupPrefix=Åpne «%S»
 badContentBlocked.blocked.message=%S blokkerer innhold på denne siden.
 badContentBlocked.notblocked.message=%S blokkerer ikke noe innhold på denne siden.
 
-# missing plugin installer
-installPlugin.message = Vil du installere programtillegget som trengs for å vise medieinnhold på denne siden?
-installPlugin.button.label=Installer %S
-installPlugin.button.accesskey=I
-installPlugin.ignoreButton.label=Ikke spør igjen
-installPlugin.ignoreButton.accesskey=k
-
 crashedpluginsMessage.title=Programtillegget %S krasjet.
 crashedpluginsMessage.reloadButton.label=Last siden på nytt
 crashedpluginsMessage.reloadButton.accesskey=L
@@ -562,13 +555,18 @@ getUserMedia.stopSharing.accesskey = S
 
 getUserMedia.sharingMenu.label = Faner som deler enhet
 getUserMedia.sharingMenu.accesskey = F
-# LOCALIZATION NOTE (getUserMedia.sharingMenuCamera, getUserMedia.sharingMenuCamera,
-#                    getUserMedia.sharingMenuMicrophone, getUserMedia.sharingMenuApplication,
-#                    getUserMedia.sharingMenuScreen, getUserMedia.sharingMenuWindow,
+# LOCALIZATION NOTE (getUserMedia.sharingMenuCamera
+#                    getUserMedia.sharingMenuMicrophone,
+#                    getUserMedia.sharingMenuApplication,
+#                    getUserMedia.sharingMenuScreen,
+#                    getUserMedia.sharingMenuWindow,
 #                    getUserMedia.sharingMenuCameraMicrophone,
 #                    getUserMedia.sharingMenuCameraMicrophoneApplication,
 #                    getUserMedia.sharingMenuCameraMicrophoneScreen,
 #                    getUserMedia.sharingMenuCameraMicrophoneWindow,
+#                    getUserMedia.sharingMenuCameraApplication,
+#                    getUserMedia.sharingMenuCameraScreen,
+#                    getUserMedia.sharingMenuCameraWindow,
 #                    getUserMedia.sharingMenuMicrophoneApplication,
 #                    getUserMedia.sharingMenuMicrophoneScreen,
 #                    getUserMedia.sharingMenuMicrophoneWindow):
@@ -582,6 +580,9 @@ getUserMedia.sharingMenuCameraMicrophone = %S (kamera og mikrofon)
 getUserMedia.sharingMenuCameraMicrophoneApplication = %S (kamera, mikrofon og program)
 getUserMedia.sharingMenuCameraMicrophoneScreen = %S (kamera, mikrofon og skjerm)
 getUserMedia.sharingMenuCameraMicrophoneWindow = %S (kamera, mikrofon og vindu)
+getUserMedia.sharingMenuCameraApplication = %S (kamera og applikasjon)
+getUserMedia.sharingMenuCameraScreen = %S (kamera og skjerm)
+getUserMedia.sharingMenuCameraWindow = %S (kamera og vindu)
 getUserMedia.sharingMenuMicrophoneApplication = %S (mikrofon og program)
 getUserMedia.sharingMenuMicrophoneScreen = %S (mikrofon og skjerm)
 getUserMedia.sharingMenuMicrophoneWindow = %S (mikrofon og vindu)
@@ -603,3 +604,12 @@ slowStartup.disableNotificationButton.accesskey = k
 customizeTips.tip0 = %1$S: Du kan tilpasse %2$S til å virke på den måten du ønsker. Dra ett eller flere av elementene ovenfor til menyen eller verktøylinjen. %3$S om tilpasning av %2$S.
 customizeTips.tip0.hint = Hint
 customizeTips.tip0.learnMore = Les mer
+
+# LOCALIZATION NOTE(appmenu.*.description, appmenu.*.label): these are used for
+# the appmenu labels and buttons that appear when an update is staged for
+# installation or a background update has failed and a manual download is required.
+# %S is brandShortName
+appmenu.restartNeeded.description = Start %S på nytt for å installere oppdateringer
+appmenu.updateFailed.description = Bakgrunnsoppdatering feilet, prøv å laste ned oppdatering
+appmenu.restartBrowserButton.label = Start %S på nytt
+appmenu.downloadUpdateButton.label = Last ned oppdatering
