[sl] update from Pootle (thunderbird)

--- a/sl/editor/ui/chrome/composer/editor.properties
+++ b/sl/editor/ui/chrome/composer/editor.properties
@@ -88,7 +88,7 @@ LinkText=Besedilo povezave
 LinkImage=Slika povezave
 MixedSelection=[Mešana izbira]
 Mixed=(mešano)
-EnterLinkText=Vnesite besedilo za prikaz pri povezavi:
+EnterLinkText=Vnesite prikazano besedilo za povezavo:
 EnterLinkTextAccessKey=T
 EmptyLinkTextError=Vnesite nekaj besedila za povezavo.
 EditTextWarning=To bo zamenjalo obstoječo vsebino.
@@ -109,20 +109,20 @@ Style_I=I, II, III …
 Style_i=i, ii, iii …
 Style_A=A, B, C …
 Style_a=a, b, c …
-Pixels=pik
+Pixels=slikovnih točk
 Percent=odstotkov
 PercentOfCell=% celice
 PercentOfWindow=% okna
 PercentOfTable=% tabele
 #LOCALIZATION NOTE (untitledTitle): %S is the window #.  No plural handling needed.
-untitledTitle=brez-naslova-%S
+untitledTitle=brez naslova - %S
 untitledDefaultFilename=brez naslova
 ShowToolbar=Pokaži orodno vrstico
 HideToolbar=Skrij orodno vrstico
-ImapError=Slike ni moč naložiti \u0020
+ImapError=Slike ni mogoče naložiti\u0020
 ImapCheck=\nIzberite novo mesto (URL) in poskusite znova.
 SaveToUseRelativeUrl=Relativne URL-je se lahko uporablja samo straneh, ki so že shranjene
-NoNamedAnchorsOrHeadings=(Na tej strani ni ne poimenovanih sider ne naslovov)
+NoNamedAnchorsOrHeadings=(Na tej strani ni sider z imenom ali glav)
 TextColor=Barva besedila
 HighlightColor=Barva označenega besedila
 PageColor=Barva ozadja strani
@@ -131,19 +131,19 @@ TableColor=Barva ozadja tabele
 CellColor=Barva ozadja celice
 TableOrCellColor=Barva tabele ali celice
 LinkColor=Barva besedila povezave
-ActiveLinkColor=Barva besedila aktivne povezave
-VisitedLinkColor=Barva besedila že obiskane povezave
-NoColorError=Izberite barvo s klikom ali vnesite veljaven niz HTML za barve
+ActiveLinkColor=Barva besedila dejavne povezave
+VisitedLinkColor=Barva besedila obiskane povezave
+NoColorError=Kliknite na barvo ali vnesite veljaven niz barve HTML
 Table=Tabela
 TableCell=Celica tabele
 NestedTable=Vgnezdena tabela
 HLine=Vodoravna črta
-Link=Poveži
+Link=Povezava
 Image=Slika
 ImageAndLink=Slika in povezava
 NamedAnchor=Poimenovano sidro
 List=Seznam
-ListItem=Postavka v seznamu
+ListItem=Predmet seznama
 Form=Obrazec
 InputTag=Polje obrazca
 InputImage=Slika obrazca
@@ -153,15 +153,15 @@ Button=Gumb
 Label=Oznaka
 FieldSet=Nabor polj
 Tag=Oznaka
-MissingSiteNameError=Vnesite ime za to stran za objavo.
+MissingSiteNameError=Vnesite ime strani za objavo.
 MissingPublishUrlError=Vnesite mesto za objavo te strani.
 MissingPublishFilename=Vnesite ime datoteke za trenutno stran.
 #LOCALIZATION NOTE (DuplicateSiteNameError): Don't translate %name%
-DuplicateSiteNameError="%name%" že obstaja. Vnesite kako drugo ime za spletišče.
+DuplicateSiteNameError="%name%" že obstaja. Vnesite drugo ime strani.
 AdvancedProperties=Napredne lastnosti …
-AdvancedEditForCellMsg=Napredno urejanje ni mogoče, če je izbranih več celic
+AdvancedEditForCellMsg=Napredno urejanje ni na voljo, če je izbranih več celic
 # LOCALIZATION NOTE (ObjectProperties):Don't translate "%obj%" it will be replaced with one of above object nouns
-ObjectProperties=%obj% lastnosti …
+ObjectProperties=Lastnosti %obj% …
 # LOCALIZATION NOTE This character must be in the above string and not confict with other accesskeys in Format menu
 ObjectPropertiesAccessKey=o
 # LOCALIZATION NOTE (JoinSelectedCells): This variable should contain the "tableJoinCells.accesskey" 
@@ -180,11 +180,11 @@ Del=Del
 Delete=Izbriši
 DeleteCells=Izbriši celice
 DeleteTableTitle=Izbriši vrstice ali stolpce
-DeleteTableMsg=Če zmanjšate število vrstic oziroma stolpcev, se bo nekatere celice in njih vsebino izbrisalo. Ali to res želite?
+DeleteTableMsg=Zmanjšanje števila vrstic oziroma stolpcev bo izbrisalo nekatere celice in njihovo vsebino. Ali res to želite narediti?
 Clear=Počisti
 #Mouse actions
 Click=Klikni
-Drag=Povlecite
+Drag=Povleci
 Unknown=Neznano
 #
 # LOCALIZATION NOTE "RemoveTextStylesAccesskey" is used for both
@@ -199,8 +199,8 @@ RemoveLinksAccesskey=n
 RemoveLinks=Odstrani povezave
 StopLinks=Prekini povezavo
 #
-NoFormAction=Priporočljivo je vnesti dejanje za ta obrazec. Samodostavni obrazci so napredna tehnika, ki ne deluje dosledno v vseh brskalnikih.
-NoAltText=Če je slika pomembna za pomen spletne strani, morate zanjo vnesti nadomestno besedilo, ki se bo med nalaganjem slike v besedilnih brskalnikih in v ostalih brskalnikih izpisalo, medtem ko se slika nalaga ali pa v primeru, da je nalaganje slik onemogočeno.
+NoFormAction=Priporočljivo je vnesti dejanje za ta obrazec. Samoobjavni obrazci so napredna tehnika, ki ne deluje dosledno v vseh brskalnikih.
+NoAltText=Če je slika pomembna za pomen spletne strani, morate zanjo vnesti nadomestno besedilo, ki se bo izpisalo v besedilnih brskalnikih in ki se bo med nalaganjem slike ali onemogočenim nalaganjem slik izpisalo v ostalih brskalnikih.
 #
-Malformed=Vira ni bilo mogoče pretvoriti nazaj v dokument, ker nima pravilne oblike XHTML.
-NoLinksToCheck=Ni elementov, katerih povezave bi bilo potrebno preveriti
+Malformed=Vira ni bilo mogoče pretvoriti nazaj v dokument, ker ni v pravilni obliki XHTML.
+NoLinksToCheck=Ni elementov s povezavami, katere bi bilo potrebno preveriti
