Bug 1085148 - Firefox Desktop 35: browser. r=KaiRo

--- a/de/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/de/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -97,8 +97,19 @@ quit-button.tooltiptext.linux2 = %1$S beenden (%2$S)
 # %2$S is the keyboard shortcut
 quit-button.tooltiptext.mac = %1$S beenden (%2$S)
 
+loop-call-button2.label = Gespräch beginnen
+loop-call-button2.tooltiptext = Gespräch beginnen
+
+social-share-button.label = Seite teilen
+social-share-button.tooltiptext = Diese Seite teilen
+
 panic-button.label = Vergessen
 panic-button.tooltiptext = Teile der Browser-Chronik löschen
 
-loop-call-button.label = Zu Gespräch einladen
-loop-call-button.tooltiptext = Eine Person zu einem Gespräch einladen
+web-apps-button.label = Apps
+web-apps-button.tooltiptext = Apps entdecken
+
+# LOCALIZATION NOTE(devtools-webide-button.label, devtools-webide-button.tooltiptext):
+# widget is only visible after WebIDE has been started once (Tools > Web Developers > WebIDE)
+devtools-webide-button.label = WebIDE
+devtools-webide-button.tooltiptext = WebIDE öffnen
