--- a/de/browser/chrome/browser/downloads/downloads.properties
+++ b/de/browser/chrome/browser/downloads/downloads.properties
@@ -38,6 +38,33 @@ stateBlockedPolicy=Durch Ihre Sicherheitszonen-Regeln blockiert
 # Indicates that the download was blocked after scanning.
 stateDirty=Blockiert: Enthält eventuell einen Virus oder Spyware
 
+# LOCALIZATION NOTE (blockedMalware, blockedPotentiallyUnwanted,
+#                    blockedUncommon):
+# These strings are shown in the panel for some types of blocked downloads, and
+# are immediately followed by the "Learn More" link, thus they must end with a
+# period.  You may need to adjust "downloadDetails.width" in "downloads.dtd" if
+# this turns out to be longer than the other existing status strings.
+# Note: These strings don't exist in the UI yet.  See bug 1053890.
+blockedMalware=Diese Datei enthält einen Virus oder Malware.
+blockedPotentiallyUnwanted=Diese Datei kann Ihren Computer beschädigen.
+blockedUncommon=Das Öffnen dieser Datei ist nicht sicher.
+
+# LOCALIZATION NOTE (unblockHeader, unblockTypeMalware,
+#                    unblockTypePotentiallyUnwanted, unblockTypeUncommon,
+#                    unblockTip, unblockButtonContinue, unblockButtonCancel):
+# These strings are displayed in the dialog shown when the user asks a blocked
+# download to be unblocked.  The severity of the threat is expressed in
+# descending order by the unblockType strings, it is higher for files detected
+# as malware and lower for uncommon downloads.
+# Note: These strings don't exist in the UI yet.  See bug 1053890.
+unblockHeader=Soll die Blockierung dieser Datei wirklich aufgehoben werden?
+unblockTypeMalware=Diese Datei enthält einen Virus oder Malware, welche Ihren Computer beschädigen wird.
+unblockTypePotentiallyUnwanted=Diese als hilfreicher Download getarnte Datei wird unerwartete Änderungen an Ihren Programmen und Einstellungen vornehmen.
+unblockTypeUncommon=Diese Datei wurde von einer ungewöhnlichen und potenziell gefährlichen Website heruntergeladen und das Öffnen könnte nicht sicher sein.
+unblockTip=Sie können nach einer anderen Quellen für den Download suchen oder versuchen, die Datei erneut herunterzuladen.
+unblockButtonContinue=Trotzdem Blockierung aufheben
+unblockButtonCancel=Mich weiter schützen
+
 # LOCALIZATION NOTE (sizeWithUnits):
 # %1$S is replaced with the size number, and %2$S with the measurement unit.
 sizeWithUnits=%1$S %2$S
