--- a/de/browser/chrome/browser/places/places.properties
+++ b/de/browser/chrome/browser/places/places.properties
@@ -75,16 +75,17 @@ OrganizerQueryDownloads=Downloads
 OrganizerQueryAllBookmarks=Alle Lesezeichen
 OrganizerQueryTags=Schlagwörter
 
-# LOCALIZATION NOTE (tagResultLabel) :
-# This is what we use to form the label (for screen readers)
-# for url bar autocomplete results of type "tag"
-# See createResultLabel() in urlbarBindings.xml 
+# LOCALIZATION NOTE (tagResultLabel, bookmarkResultLabel, switchtabResultLabel,
+# keywordResultLabel, searchengineResultLabel)
+# Noun used to describe the location bar autocomplete result type
+# to users with screen readers
+# See createResultLabel() in urlbarBindings.xml
 tagResultLabel=Schlagwort
-# LOCALIZATION NOTE (bookmarkResultLabel) :
-# This is what we use to form the label (for screen readers)
-# for url bar autocomplete results of type "bookmark"
-# See createResultLabel() in urlbarBindings.xml 
 bookmarkResultLabel=Lesezeichen
+switchtabResultLabel=Tab
+keywordResultLabel=Schlüsselwort
+searchengineResultLabel=Suchmaschine
+
 
 # LOCALIZATION NOTE (lockPrompt.text)
 # %S will be replaced with the application name.
