--- a/de/browser/chrome/browser/browser.properties
+++ b/de/browser/chrome/browser/browser.properties
@@ -103,13 +103,6 @@ popupShowPopupPrefix=Anzeigen: '%S'
 badContentBlocked.blocked.message=%S blockiert Inhalte auf dieser Seite.
 badContentBlocked.notblocked.message=%S blockiert keinen Inhalt auf dieser Seite.
 
-# missing plugin installer
-installPlugin.message = Soll das für die Wiedergabe von Medienelementen auf dieser Seite benötigte Plugin installiert werden?
-installPlugin.button.label=%S installieren
-installPlugin.button.accesskey=s
-installPlugin.ignoreButton.label=Nicht mehr nachfragen
-installPlugin.ignoreButton.accesskey=N
-
 crashedpluginsMessage.title=Das Plugin "%S" ist abgestürzt.
 crashedpluginsMessage.reloadButton.label=Seite neu laden
 crashedpluginsMessage.reloadButton.accesskey=S
@@ -562,13 +555,18 @@ getUserMedia.stopSharing.accesskey = z
 
 getUserMedia.sharingMenu.label = Tabs mit Zugriff auf Gerät
 getUserMedia.sharingMenu.accesskey = Z
-# LOCALIZATION NOTE (getUserMedia.sharingMenuCamera, getUserMedia.sharingMenuCamera,
-#                    getUserMedia.sharingMenuMicrophone, getUserMedia.sharingMenuApplication,
-#                    getUserMedia.sharingMenuScreen, getUserMedia.sharingMenuWindow,
+# LOCALIZATION NOTE (getUserMedia.sharingMenuCamera
+#                    getUserMedia.sharingMenuMicrophone,
+#                    getUserMedia.sharingMenuApplication,
+#                    getUserMedia.sharingMenuScreen,
+#                    getUserMedia.sharingMenuWindow,
 #                    getUserMedia.sharingMenuCameraMicrophone,
 #                    getUserMedia.sharingMenuCameraMicrophoneApplication,
 #                    getUserMedia.sharingMenuCameraMicrophoneScreen,
 #                    getUserMedia.sharingMenuCameraMicrophoneWindow,
+#                    getUserMedia.sharingMenuCameraApplication,
+#                    getUserMedia.sharingMenuCameraScreen,
+#                    getUserMedia.sharingMenuCameraWindow,
 #                    getUserMedia.sharingMenuMicrophoneApplication,
 #                    getUserMedia.sharingMenuMicrophoneScreen,
 #                    getUserMedia.sharingMenuMicrophoneWindow):
@@ -582,6 +580,9 @@ getUserMedia.sharingMenuCameraMicrophone = %S (Kamera und Mikrofon)
 getUserMedia.sharingMenuCameraMicrophoneApplication = %S (Kamera, Mikrofon und Anwendung)
 getUserMedia.sharingMenuCameraMicrophoneScreen = %S (Kamera, Mikrofon und Bildschirm)
 getUserMedia.sharingMenuCameraMicrophoneWindow = %S (Kamera, Mikrofon und Fenster)
+getUserMedia.sharingMenuCameraApplication = %S (Kamera und Anwendung)
+getUserMedia.sharingMenuCameraScreen = %S (Kamera und Bildschirm)
+getUserMedia.sharingMenuCameraWindow = %S (Kamera und Fenster)
 getUserMedia.sharingMenuMicrophoneApplication = %S (Mikrofon und Anwendung)
 getUserMedia.sharingMenuMicrophoneScreen = %S (Mikrofon und Bildschirm)
 getUserMedia.sharingMenuMicrophoneWindow = %S (Mikrofon und Fenster)
@@ -603,3 +604,12 @@ slowStartup.disableNotificationButton.accesskey = N
 customizeTips.tip0 = %1$S: Sie können %2$S nach Ihren Wünschen anpassen. Ziehen Sie einfach einen Eintrag von oben in das Menü oder in die Symbolleiste. %3$S zum Anpassen von %2$S.
 customizeTips.tip0.hint = Hinweis
 customizeTips.tip0.learnMore = Weitere Informationen
+
+# LOCALIZATION NOTE(appmenu.*.description, appmenu.*.label): these are used for
+# the appmenu labels and buttons that appear when an update is staged for
+# installation or a background update has failed and a manual download is required.
+# %S is brandShortName
+appmenu.restartNeeded.description = %S neu starten, um Updates anzuwenden
+appmenu.updateFailed.description = Hintergrundupdate fehlgeschlagen, bitte Update herunterladen
+appmenu.restartBrowserButton.label = %S neu starten
+appmenu.downloadUpdateButton.label = Update herunterladen
