--- a/nb-NO/browser/chrome/browser/loop/loop.properties
+++ b/nb-NO/browser/chrome/browser/loop/loop.properties
@@ -4,7 +4,17 @@
 
 # Panel Strings
 
+## LOCALIZATION NOTE(clientShortname2): This should not be localized and
+## should remain "Firefox Hello" for all locales.
+clientShortname2=Firefox Hello
+
+## LOCALIZATION_NOTE(first_time_experience.title): clientShortname will be
+## replaced by the brand name
+first_time_experience_title={{clientShortname}} — Bli med i samtale
+first_time_experience_button_label=Kom i gang
+
 share_link_header_text=Del denne lenken for å invitere noen til å prate:
+invite_header_text=Inviter noen til å prate.
 
 ## LOCALIZATION NOTE(invitee_name_label): Displayed when obtaining a url.
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#precall-firstrun
@@ -52,12 +62,14 @@ problem_accessing_account=Et problem oppstod ved tilgang til kontoen din
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error for location
 retry_button=Prøv igjen
 
-share_email_subject3=Du er invitert til en samtale
-## LOCALIZATION NOTE (share_email_body3): In this item, don't translate the
+share_email_subject4={{clientShortname}} — Bli med i samtalen
+## LOCALIZATION NOTE (share_email_body4): In this item, don't translate the
 ## part between {{..}} and leave the \r\n\r\n part alone
-share_email_body3=For å godta denne invitasjonen, kopier eller klikk på denne lenken for å starte samtalen:\r\n\r\n{{callUrl}}
+share_email_body4=Hei!\r\n\r\nBli med i en videosamtale med {{clientShortname}}:\r\n\r\nDu trenger ikke laste ned eller installere noe. Bare kopier og lim inn denne URL-en i nettleseren:\r\n\r\n{{callUrl}}\r\n\r\nHvis du vil, kan du lese mer om {{clientShortname}} på {{learnMoreUrl}}\r\n\r\nSnakkes snart!
 share_button=E-post
+share_button2=Send lenke på e-post
 copy_url_button=Kopier
+copy_url_button2=Kopier lenke
 copied_url_button=Kopiert!
 
 panel_footer_signin_or_signup_link=Logg inn eller registrer deg
@@ -85,6 +97,10 @@ new_contact_button=Ny kontakt
 ## and click the 'New Contact' button to see the fields.
 new_contact_name_placeholder=Navn
 new_contact_email_placeholder=E-post
+new_contact_phone_placeholder=Firefox OS-telefon
+
+contacts_blocked_contacts=Blokkerte kontakter
+
 ## LOCALIZATION NOTE (add_contact_button):
 ## This is the button to actually add the new contact
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#contacts
@@ -173,7 +189,8 @@ video_call_menu_button=Videosamtale
 initiate_call_button_label2=Klar til å starte samtalen?
 incoming_call_title2=Samtaleforespørsel
 incoming_call_accept_button=Aksepter
-incoming_call_accept_audio_only_tooltip=Aksepter med stemme
+incoming_call_accept_audio_only_tooltip=Aksepter med lyd
+incoming_call_accept_audio_video_tooltip=Aksepter med video
 incoming_call_cancel_button=Avbryt
 incoming_call_cancel_and_block_button=Avbryt og blokker
 incoming_call_block_button=Blokker
@@ -238,12 +255,17 @@ connection_error_see_console_notification=Samtale mislyktes; se konsoll for deta
 ## LOCALIZATION NOTE (legal_text_and_links3): In this item, don't translate the
 ## parts between {{..}} because these will be replaced with links with the labels
 ## from legal_text_tos and legal_text_privacy. clientShortname will be replaced
-## by the brand name, or fall back to client_shortname_fallback
+## by the brand name.
 legal_text_and_links3=Ved å bruke {{clientShortname}} godtar du {{terms_of_use}} \
   og {{privacy_notice}}.
 legal_text_tos = bruksbetingelsene
 legal_text_privacy = personvernmerknadene
-client_shortname_fallback=dette produktet
+
+## LOCALIZATION NOTE (powered_by_beforeLogo, powered_by_afterLogo):
+## These 2 strings are displayed before and after a 'Telefonica'
+## logo.
+powered_by_beforeLogo=Powered by
+powered_by_afterLogo=
 
 feedback_call_experience_heading2=Hvordan var samtalen din?
 feedback_what_makes_you_sad=Hva gjør deg trist?
@@ -268,3 +290,30 @@ feedback_rejoin_button=Koble til igjen
 ## LOCALIZATION NOTE (feedback_report_user_button): Used to report a user in the case of
 ## an abusive user.
 feedback_report_user_button=Rapporter bruker
+
+help_label=Hjelp
+tour_label=Omvisning
+
+## LOCALIZATION NOTE(rooms_default_room_name_template): {{conversationLabel}}
+## will be replaced by a number. For example "Conversation 1" or "Conversation 12".
+rooms_default_room_name_template=Samtale {{conversationLabel}}
+rooms_leave_button_label=Forlat
+rooms_list_copy_url_tooltip=Kopier lenke
+## LOCALIZATION NOTE (rooms_list_current_conversations):
+## Semicolon-separated list of plural forms. See:
+## http://developer.mozilla.org/en/docs/Localization_and_Plurals
+## We prefer to have no number in the string, but if you need it for your
+## language please use {{num}}.
+rooms_list_current_conversations=Nåværende samtale;Nåværende samtaler
+rooms_list_delete_tooltip=Slett samtale
+rooms_list_deleteConfirmation_label=Er du sikker?
+rooms_list_no_current_conversations=Ingen nåværende samtaler
+rooms_name_this_room_label=Navngi denne samtalen
+rooms_new_room_button_label=Start en samtale
+rooms_only_occupant_label=Du er den første her.
+rooms_panel_title=Velg en samtale eller start en ny
+rooms_room_full_label=Der er allerede to personer i denne samtalen.
+rooms_room_full_call_to_action_nonFx_label=Last ned {{brandShortname}} for å starte din egen
+rooms_room_full_call_to_action_label=Les mer om {{clientShortname}} »
+rooms_room_joined_label=Noen har koblet til samtalen!
+rooms_room_join_label=Koble til samtalen
