--- a/sq/browser/chrome/browser/devtools/gclicommands.properties
+++ b/sq/browser/chrome/browser/devtools/gclicommands.properties
@@ -548,7 +548,7 @@ resizeModeOnDesc=Kalo në Mënyrën Dizajn Reagues
 # LOCALIZATION NOTE (resizeModeOffDesc) A very short string to describe the
 # 'resize off' command. This string is designed to be shown in a menu
 # alongside the command name, which is why it should be as short as possible.
-resizeModeOffDesc=Dil nga Mënyra Dizajn Reagues
+resizeModeOffDesc=Dilni nga Mënyra Dizajn Reagues
 
 # LOCALIZATION NOTE (resizeModeToggleDesc) A very short string to describe the
 # 'resize toggle' command. This string is designed to be shown in a menu
