--- a/sq/browser/chrome/browser/devtools/netmonitor.properties
+++ b/sq/browser/chrome/browser/devtools/netmonitor.properties
@@ -27,7 +27,7 @@ netmonitor.accesskey=R
 # LOCALIZATION NOTE (netmonitor.tooltip):
 # This string is displayed in the tooltip of the tab when the Network Monitor is
 # displayed inside the developer tools window.
-netmonitor.tooltip=Mbikëqyrës Rrjeti
+netmonitor.tooltip=Mbikëqyrje Rrjeti
 
 # LOCALIZATION NOTE (collapseDetailsPane): This is the tooltip for the button
 # that collapses the network details pane in the UI.
