--- a/sq/browser/chrome/browser/tabview.properties
+++ b/sq/browser/chrome/browser/tabview.properties
@@ -3,7 +3,7 @@
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
 tabview.button.searchTabs=Kërkoni në grupe skedash
-tabview.button.exitTabGroups=Dil nga grupi i skedave
+tabview.button.exitTabGroups=Dilni nga grupi i skedave
 tabview.groupItem.defaultName=Emërtojeni këtë grup skedash
 tabview.groupItem.closeGroup=Mbylleni grupin
 tabview.groupItem.undoCloseGroup=Zhbëje Mbylljen e Grupit
