--- a/sq/dom/chrome/dom/dom.properties
+++ b/sq/dom/chrome/dom/dom.properties
@@ -208,4 +208,4 @@ KeyNameZoomWarning=Vlera "Zoom" për KeyboardEvent.key është e vjetruar dhe do
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key" and "Dead".
 KeyNameDeadKeysWarning=Vlera për KeyboardEvent.key që fillojnë me "Dead" janë të vjetruara do të shkrihen në një thjesht "Dead". Për më tepër ndihmë, shihni https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 ImportXULIntoContentWarning=Importimi i nyjeve XUL në një dokument lëndor është vjetruar. Së shpejti ky funksion mund të hiqet.
-XMLDocumentLoadPrincipalMismatch=Përdorimi i document.load është i ndaluar në Dokumente që vijnë prej Dritaresh të tjera. Vetëm Dritares në të cilën qe krijuar Dokumenti i lejohet të thërrasë .load në atë Dokument. Parapëlqehet të përdorni XMLHttpRequest më mirë.
+XMLDocumentLoadPrincipalMismatch=Përdorimi i document.load është i ndaluar për Dokumente që vijnë nga të tjera Dritare. Vetëm Dritares në të cilën qe krijuar Dokumenti i lejohet të thërrasë .load në atë Dokument. Parapëlqehet përdorimi i XMLHttpRequest më mirë.
