--- a/sq/mobile/android/chrome/browser.properties
+++ b/sq/mobile/android/chrome/browser.properties
@@ -9,6 +9,11 @@ addonsConfirmInstall.install=Instaloje
 alertAddonsDownloading=Shkarkim shtese
 alertAddonsInstalledNoRestart=Instalim i plotësuar
 alertAddonsFail=Instalimi dështoi
+alertAddonsInstalledNoRestart.message=Instalim i plotë
+
+# LOCALIZATION NOTE (alertAddonsInstalledNoRestart.action2): Ideally, this string is short (it's a
+# button label) and upper-case, to match Google and Android's convention.
+alertAddonsInstalledNoRestart.action2=SHTESË
 
 alertDownloadsStart2=Shkarkimi po fillon
 alertDownloadsDone2=Shkarkim i plotësuar
@@ -20,7 +25,10 @@ alertDownloadsPause=Pushim
 alertDownloadsResume=Rimerre
 alertDownloadsCancel=Anuloje
 
-alertFullScreenToast=Shtypni tastin BACK që të dilni nga mënyrë ekran-i-plotë
+# when the user tries to download something in Guest mode.
+downloads.disabledInGuest=Në sesione mysafiri shkarkimet janë të çaktivizuara
+
+alertFullScreenToast=Shtypni tastin BACK që të dilni nga mënyra ekran-i-plotë
 
 # LOCALIZATION NOTE (alertSearchEngineAddedToast, alertSearchEngineErrorToast, alertSearchEngineDuplicateToast)
 # %S will be replaced by the name of the search engine (exposed by the current page)
@@ -71,6 +79,8 @@ blockPopups.label=Bllokoji Flluskat
 
 # XPInstall
 xpinstallPromptWarning2=%S e pengoi këtë sajt (%S) t’ju kërkojë të instalojë "software" në pajisjen tuaj.
+xpinstallPromptWarningLocal=%S e pengoi këtë shtesë (%S) të instalohej në pajisjen tuaj.
+xpinstallPromptWarningDirect=%S e pengoi këtë shtesë të instalohej në pajisjen tuaj.
 xpinstallPromptAllowButton=Lejoje
 xpinstallDisabledMessageLocked=Instalimi i software-it është çaktivizuar nga përgjegjësi i sistemit tuaj.
 xpinstallDisabledMessage2=Instalimi i software-it është hëpërhë i çaktivizuar. Klikoni mbi Aktivizoje dhe riprovoni.
@@ -114,12 +124,58 @@ contacts.ask=Të lejohet %S të hyjë në kontaket tuaja?
 # checkbox to indicate whether or not the user wants to make a permanent decision.
 contacts.dontAskAgain=Mos pyet sërish për këtë sajt
 
+# Device Storage API
+deviceStorageMusic.allow=Lejoje
+deviceStorageMusic.dontAllow=Mos e lejo
+deviceStorageMusic.ask=Të lejohet %S të hyjë te muzika juaj?
+# LOCALIZATION NOTE (deviceStorageMusic.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+deviceStorageMusic.dontAskAgain=Mos pyet sërish për këtë sajt
+
+deviceStoragePictures.allow=Lejoje
+deviceStoragePictures.dontAllow=Mos e lejo
+deviceStoragePictures.ask=Të lejohet %S të hyjë te figurat tuaja?
+# LOCALIZATION NOTE (deviceStoragePictures.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+deviceStoragePictures.dontAskAgain=Mos pyet sërish për këtë sajt
+
+deviceStorageSdcard.allow=Lejoje
+deviceStorageSdcard.dontAllow=Mos e lejo
+deviceStorageSdcard.ask=Të lejohet %S të hyjë te depozitim i jashtëm?
+# LOCALIZATION NOTE (deviceStorageSdcard.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+deviceStorageSdcard.dontAskAgain=Mos pyet sërish për këtë sajt
+
+deviceStorageVideos.allow=Lejoje
+deviceStorageVideos.dontAllow=Mos e lejo
+deviceStorageVideos.ask=Të lejohet %S të hyjë te videot tuaja?
+# LOCALIZATION NOTE (deviceStorageVideos.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+deviceStorageVideos.dontAskAgain=Mos pyet sërish për këtë sajt
+
 # New Tab Popup
 # LOCALIZATION NOTE (newtabpopup, newprivatetabpopup): Semicolon-separated list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # #1 number of tabs
 newtabpopup.opened=U hap skedë e re;U hapën #1 skeda të reja
 newprivatetabpopup.opened=U hap skedë e re private;U hapën #1 skeda të reja private
+
+# LOCALIZATION NOTE (newtabpopup.switch): Ideally, this string is short (it's a
+# button label) and upper-case, to match Google and Android's convention.
+#newtabpopup.switch=SWITCH
+
+# Undo close tab toast
+# LOCALIZATION NOTE (undoCloseToast.message): This message appears in a toast
+# when the user closes a tab. %S is the title of the tab that was closed.
+undoCloseToast.message=U mbyll %S
+
+# LOCALIZATION NOTE (undoCloseToast.messageDefault): This message appears in a
+# toast when the user closes a tab if there is no title to display.
+undoCloseToast.messageDefault=U mbyll skedë
+
+# LOCALIZATION NOTE (undoCloseToast.action2): Ideally, this string is short (it's a
+# button label) and upper-case, to match Google and Android's convention.
+undoCloseToast.action2=ZHBËJE
 
 # Offline web applications
 offlineApps.ask=Të lejohet %S të depozitojë të dhëna në pajisjen tuaj për përdorim jo në linjë?
@@ -184,7 +240,7 @@ contextmenu.shareImage=Ndajeni Figurën Me të Tjerët
 contextmenu.search=Kërkim m e%S
 contextmenu.saveImage=Ruajeni Figurën
 contextmenu.setImageAs=Vendoseni Figurën Si
-contextmenu.addSearchEngine=Shtoni Motor Kërkimesh
+contextmenu.addSearchEngine2=Shtoni Motor Kërkimesh
 contextmenu.playMedia=Luajeni
 contextmenu.pauseMedia=Pushojeni
 contextmenu.shareMedia=Ndajeni Videon Me të Tjerët
@@ -195,11 +251,15 @@ contextmenu.saveVideo=Ruajeni Videon
 contextmenu.saveAudio=Ruajeni Audion
 contextmenu.addToContacts=Shtojeni te Kontaktet
 #contextmenu.castToScreen=Cast to Screen
+# The label that will be used in the contextmenu and the pageaction
+contextmenu.sendToDevice=Dërgojeni në Pajisje
 
 contextmenu.copy=Kopjoje
 contextmenu.cut=Prije
 contextmenu.selectAll=Përzgjidhe Krejt
 contextmenu.paste=Ngjite
+
+contextmenu.call=Thirrje
 
 # Select UI
 selectHelper.closeMultipleSelectDialog=U bë
@@ -299,12 +359,14 @@ getUserMedia.shareMicrophone.message = Do të donit ta ndanit mikrofonin tuaj me
 getUserMedia.shareCameraAndMicrophone.message = Do të donit ta ndanit kamerën dhe mikrofonin tuaj me %S?
 getUserMedia.denyRequest.label = Mos e Nda
 getUserMedia.shareRequest.label = Ndaje
-getUserMedia.videoDevice.default = Kamera %S
-getUserMedia.videoDevice.front = Ballorja
-getUserMedia.videoDevice.back = E pasmja
-getUserMedia.videoDevice.none = Pa Video
-getUserMedia.videoDevice.prompt = Kamera për përdorim
-getUserMedia.audioDevice.default = Mikrofon %S
+getUserMedia.videoSource.default = Kamera %S
+getUserMedia.videoSource.frontCamera = Kamera ballore
+
+getUserMedia.videoSource.backCamera = Kamera e pasme
+getUserMedia.videoSource.none = Pa Video
+getUserMedia.videoSource.tabShare = Zgjidhni një skedë për transmetim
+getUserMedia.videoSource.prompt = Burim video
+getUserMedia.audioDevice.default = Mikrofoni %S
 getUserMedia.audioDevice.none = Pa Audio
 getUserMedia.audioDevice.prompt = Mikrofon për përdorim
 getUserMedia.sharingCamera.message2 = Kamera është e hapur
@@ -320,6 +382,8 @@ openInApp.pageAction = Hape në Zbatim
 openInApp.ok = OK
 openInApp.cancel = Anuloje
 
+#Tab sharing
+tabshare.title = "Zgjidhni një skedë për transmetim"
 #Tabs in context menus
 browser.menu.context.default = Lidhje
 browser.menu.context.img = Figurë
@@ -327,3 +391,13 @@ browser.menu.context.video = Video
 browser.menu.context.audio = Audio
 browser.menu.context.tel = Telefon
 browser.menu.context.mailto = Mesazh
+
+# "Subscribe to page" prompts created in FeedHandler.js
+feedHandler.chooseFeed=Zgjidhni prurje
+feedHandler.subscribeWith=Pajtohuni me
+
+# LOCALIZATION NOTE (nativeWindow.deprecated):
+# This string is shown in the console when someone uses deprecated NativeWindow apis.
+# %1$S=name of the api that's deprecated, %2$S=New API to use. This may be a url to
+# a file they should import or the name of an api.
+nativeWindow.deprecated=%S është vjetruar. Ju lutemi, përdorni %S më mirë
