--- a/sq/webapprt/webapprt/webapp.properties
+++ b/sq/webapprt/webapprt/webapp.properties
@@ -10,7 +10,7 @@
 
 # LOCALIZATION NOTE (quitApplicationCmdMac.label): %S will be replaced with
 # the name of the webapp.
-quitApplicationCmdMac.label=Dil prej %S
+quitApplicationCmdMac.label=Dilni prej %S
 
 # LOCALIZATION NOTE (hideApplicationCmdMac.label): %S will be replaced with
 # the name of the webapp.
