--- a/sq/browser/chrome/browser/devtools/styleeditor.properties
+++ b/sq/browser/chrome/browser/devtools/styleeditor.properties
@@ -85,7 +85,7 @@ ToolboxStyleEditor.tooltip2=Përpunues Fletëstilesh (CSS)
 # LOCALIZATION NOTE (confirmNavigationAway): Shown in a notification box when
 # the user tries to navigate away from a web page.
 confirmNavigationAway.message=Nëse dilni nga kjo faqe, ndryshimet e paruajtura në Përpunuesin e Stileve do të humbasin.
-confirmNavigationAway.buttonLeave=Dil Nga Faqja
+confirmNavigationAway.buttonLeave=Dilni Nga Faqja
 confirmNavigationAway.buttonLeaveAccesskey=D
 confirmNavigationAway.buttonStay=Rri te Faqja
 confirmNavigationAway.buttonStayAccesskey=S
