--- a/sq/security/manager/chrome/pipnss/nsserrors.properties
+++ b/sq/security/manager/chrome/pipnss/nsserrors.properties
@@ -301,5 +301,5 @@ SSL_ERROR_POST_WARNING=Kod gabimi të panjohur SSL.
 SSL_ERROR_UNUSED_10=Kod gabimi të panjohur SSL.
 SSL_ERROR_UNUSED_5=Kod gabimi të panjohur SSL.
 MOZILLA_PKIX_ERROR_KEY_PINNING_FAILURE=Shërbyesi përdor key pinning (HPKP) por nuk u krijua dot zinxhir dëshmish të besuara dhe që i korrespondojnë pinset-it. Shkeljet e key pinning-ut nuk mund të anashkalohen.
-MOZILLA_PKIX_ERROR_CA_CERT_USED_AS_END_ENTITY=The server uses a certificate with a basic constraints extension identifying it as a certificate authority. For a properly-issued certificate, this should not be the case.
-MOZILLA_PKIX_ERROR_INADEQUATE_KEY_SIZE=The server presented a certificate with a key size that is too small to establish a secure connection.
+MOZILLA_PKIX_ERROR_CA_CERT_USED_AS_END_ENTITY=Shërbyesi përdor një dëshmi me një zgjerim të thjeshtë kufizimesh që e identifikon atë si autoritet dëshmish. Nuk do të duhej të ishte kështu, për një dëshmi të lëshuar siç duhet.
+MOZILLA_PKIX_ERROR_INADEQUATE_KEY_SIZE=Shërbyesi paraqiti një dëshmi me madhësi kyçi që është shumë e vogël për të vendosur një lidhje të sigurt.
