--- a/nb-NO/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/nb-NO/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -112,4 +112,4 @@ web-apps-button.tooltiptext = Oppdag apper
 # LOCALIZATION NOTE(devtools-webide-button.label, devtools-webide-button.tooltiptext):
 # widget is only visible after WebIDE has been started once (Tools > Web Developers > WebIDE)
 devtools-webide-button.label = WebIDE
-
+devtools-webide-button.tooltiptext = Åpne WebIDE
