--- a/nb-NO/mobile/android/chrome/browser.properties
+++ b/nb-NO/mobile/android/chrome/browser.properties
@@ -322,6 +322,10 @@ remoteNotificationGenericName=App
 # LOCALIZATION NOTE (remoteNotificationMessage): %S is the port on which
 # the remote debugger server is listening.
 remoteNotificationMessage=Lytter på port %S
+# LOCALIZATION NOTE (remoteStartNotificationTitle): %S is the name of the app.
+remoteStartNotificationTitle=Aktiver debugging for %S
+# LOCALIZATION NOTE (remoteStartNotificationMessage):
+remoteStartNotificationMessage=Trykk for å slå på ekstern debugging
 
 # Helper apps
 helperapps.open=Åpne
