--- a/nb-NO/mobile/android/chrome/handling.properties
+++ b/nb-NO/mobile/android/chrome/handling.properties
@@ -2,6 +2,7 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
+download.blocked=Klarte ikke laste ned fil
 protocol.failed=Klarte ikke finne en applikasjon for å håndtere denne lenken
 # A very short string shown in the button toast when no application can open the url
 protocol.toast.search=Søk
