tab ui improvements

--- a/nb-NO/browser/chrome/browser/newTab.properties
+++ b/nb-NO/browser/chrome/browser/newTab.properties
@@ -16,7 +16,7 @@ newtab.sponsored.explain=Denne ruten vises til deg på vegne av en Mozilla-partn
 # LOCALIZATION NOTE(newtab.enhanced.explain): %1$S will be replaced inline by
 # the gear icon used to customize the new tab window. %2$S will be replaced by
 # an active link using string newtab.learn.link as text.
-newtab.enhanced.explain=En Mozilla-partner har visuelt forbedret denne ruten, og erstattet skjermbildet. Du kan skru av forbedrede ruter ved å trykke på %1$S-knappen for valgene dine. %2$S
+newtab.enhanced.explain=En Mozilla-partner har visuelt forbedret denne ruten, og erstattet skjermbildet. Du kan skru av forbedrede ruter ved å trykke på %1$S-knappen og velge. %2$S
 # LOCALIZATION NOTE(newtab.intro.paragraph1): %1$S will be replaced inline by
 # active link using string newtab.learn.link as text.
 newtab.intro.paragraph1=Når du åpner en ny fane, ser du ruter for nettsider du besøker ofte, i tillegg til ruter som kan være interessante for deg. Noen av disse rutene kan være sponset av Mozilla-partnere. Vi indikerer alltid hvilke ruter som er sponsede. %1$S
@@ -25,6 +25,6 @@ newtab.intro.paragraph1=Når du åpner en ny fane, ser du ruter for nettsider du
 newtab.intro.paragraph2=For å tilby denne tjenesten, samler og bruker Mozilla noe informasjon for analyse om hvordan du bruker rutene i samsvar med %1$S.
 # LOCALIZATION NOTE(newtab.intro.paragraph3): %1$S will be replaced inline by
 # the gear icon used to customize the new tab window.
-newtab.intro.paragraph3=Du kan skru av ruter-funksjonen ved å trykke på knappen %1$S for valget ditt.
+newtab.intro.paragraph3=Du kan skru av ruter-funksjonen ved å trykke på knappen %1$S og velge.
 newtab.learn.link=Les mer …
-newtab.privacy.link=Personvernbestemmelser
+newtab.privacy.link=personvernbestemmelser
