FX & TB l10n update

--- a/fi/browser/chrome/browser/places/places.properties
+++ b/fi/browser/chrome/browser/places/places.properties
@@ -75,16 +75,17 @@ OrganizerQueryDownloads=Lataukset
 OrganizerQueryAllBookmarks=Kaikki kirjanmerkit
 OrganizerQueryTags=Avainsanat
 
-# LOCALIZATION NOTE (tagResultLabel) :
+# LOCALIZATION NOTE (tagResultLabel, bookmarkResultLabel, switchtabResultLabel,
+# keywordResultLabel, searchengineResultLabel)
 # Noun used to describe the location bar autocomplete result type
 # to users with screen readers
-# See createResultLabel() in urlbarBindings.xml 
+# See createResultLabel() in urlbarBindings.xml
 tagResultLabel=Avainsana
-# LOCALIZATION NOTE (bookmarkResultLabel) :
-# Noun used to describe the location bar autocomplete result type
-# to users with screen readers
-# See createResultLabel() in urlbarBindings.xml 
 bookmarkResultLabel=Kirjanmerkki
+switchtabResultLabel=Välilehti
+keywordResultLabel=Pikakomento
+searchengineResultLabel=Haku
+
 
 # LOCALIZATION NOTE (lockPrompt.text)
 # %S will be replaced with the application name.
