--- a/fi/browser/chrome/browser/browser.properties
+++ b/fi/browser/chrome/browser/browser.properties
@@ -103,13 +103,6 @@ popupShowPopupPrefix=Näytä "%S"
 badContentBlocked.blocked.message=%S estää sivun sisältöä latautumasta.
 badContentBlocked.notblocked.message=%S ei estä mitään sisältö sivulla.
 
-# missing plugin installer
-installPlugin.message = Asennetaanko liitännäinen, jonka sivun mediatiedostot tarvitsevat näkyäkseen?
-installPlugin.button.label=Asenna %S
-installPlugin.button.accesskey=A
-installPlugin.ignoreButton.label=Älä kysy uudestaan
-installPlugin.ignoreButton.accesskey=Ä
-
 crashedpluginsMessage.title=Liitännäinen %S kaatui.
 crashedpluginsMessage.reloadButton.label=Lataa sivu uudestaan
 crashedpluginsMessage.reloadButton.accesskey=L
@@ -562,13 +555,18 @@ getUserMedia.stopSharing.accesskey = L
 
 getUserMedia.sharingMenu.label = Laitteita jakavat välilehdet
 getUserMedia.sharingMenu.accesskey = j
-# LOCALIZATION NOTE (getUserMedia.sharingMenuCamera, getUserMedia.sharingMenuCamera,
-#                    getUserMedia.sharingMenuMicrophone, getUserMedia.sharingMenuApplication,
-#                    getUserMedia.sharingMenuScreen, getUserMedia.sharingMenuWindow,
+# LOCALIZATION NOTE (getUserMedia.sharingMenuCamera
+#                    getUserMedia.sharingMenuMicrophone,
+#                    getUserMedia.sharingMenuApplication,
+#                    getUserMedia.sharingMenuScreen,
+#                    getUserMedia.sharingMenuWindow,
 #                    getUserMedia.sharingMenuCameraMicrophone,
 #                    getUserMedia.sharingMenuCameraMicrophoneApplication,
 #                    getUserMedia.sharingMenuCameraMicrophoneScreen,
 #                    getUserMedia.sharingMenuCameraMicrophoneWindow,
+#                    getUserMedia.sharingMenuCameraApplication,
+#                    getUserMedia.sharingMenuCameraScreen,
+#                    getUserMedia.sharingMenuCameraWindow,
 #                    getUserMedia.sharingMenuMicrophoneApplication,
 #                    getUserMedia.sharingMenuMicrophoneScreen,
 #                    getUserMedia.sharingMenuMicrophoneWindow):
@@ -582,6 +580,9 @@ getUserMedia.sharingMenuCameraMicrophone = %S (kamera ja mikrofoni)
 getUserMedia.sharingMenuCameraMicrophoneApplication = %S (kamera, mikrofoni ja ohjelma)
 getUserMedia.sharingMenuCameraMicrophoneScreen = %S (kamera, mikrofoni ja näyttö)
 getUserMedia.sharingMenuCameraMicrophoneWindow = %S (kamera, mikrofoni ja ikkuna)
+getUserMedia.sharingMenuCameraApplication = %S (kamera ja ohjelma)
+getUserMedia.sharingMenuCameraScreen = %S (kamera ja näyttö)
+getUserMedia.sharingMenuCameraWindow = %S (kamera ja ikkuna)
 getUserMedia.sharingMenuMicrophoneApplication = %S (mikrofoni ja ohjelma)
 getUserMedia.sharingMenuMicrophoneScreen = %S (mikrofoni ja näyttö)
 getUserMedia.sharingMenuMicrophoneWindow = %S (mikrofoni ja ikkuna)
@@ -603,3 +604,12 @@ slowStartup.disableNotificationButton.accesskey = Ä
 customizeTips.tip0 = %1$S: Voit muokata %2$Sia toimimaan haluamallasi tavalla. Raahaa mikä tahansa yllä olevista valikkoon tai työkalupalkkiin. %3$S %2$Sin muokkaamisesta.
 customizeTips.tip0.hint = Vinkki
 customizeTips.tip0.learnMore = Lue lisää
+
+# LOCALIZATION NOTE(appmenu.*.description, appmenu.*.label): these are used for
+# the appmenu labels and buttons that appear when an update is staged for
+# installation or a background update has failed and a manual download is required.
+# %S is brandShortName
+appmenu.restartNeeded.description = Käynnistä %S uudestaan suorittaaksesi päivitykset
+appmenu.updateFailed.description = Päivitys taustalla epäonnistui, lataa päivitys
+appmenu.restartBrowserButton.label = Käynnistä %S uudestaan
+appmenu.downloadUpdateButton.label = Lataa päivitys
