--- a/fi/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/fi/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -97,8 +97,19 @@ quit-button.tooltiptext.linux2 = Sulje %1$S (%2$S)
 # %2$S is the keyboard shortcut
 quit-button.tooltiptext.mac = Sulje %1$S (%2$S)
 
+loop-call-button2.label = Aloita keskustelu
+loop-call-button2.tooltiptext = Aloita keskustelu
+
+social-share-button.label = Jaa sivu
+social-share-button.tooltiptext = Jaa sivu
+
 panic-button.label = Unohda
 panic-button.tooltiptext = Unohda jonkin verran selaushistoriaa
 
-loop-call-button.label = Kutsu joku keskusteluun
-loop-call-button.tooltiptext = Kutsu joku keskusteluun
+web-apps-button.label = Sovellukset
+web-apps-button.tooltiptext = Löydä sovelluksia
+
+# LOCALIZATION NOTE(devtools-webide-button.label, devtools-webide-button.tooltiptext):
+# widget is only visible after WebIDE has been started once (Tools > Web Developers > WebIDE)
+devtools-webide-button.label = WebIDE
+devtools-webide-button.tooltiptext = Open WebIDE
