--- a/ca/mobile/android/chrome/browser.properties
+++ b/ca/mobile/android/chrome/browser.properties
@@ -322,6 +322,8 @@ remoteNotificationGenericName=Aplicació
 # LOCALIZATION NOTE (remoteNotificationMessage): %S is the port on which
 # the remote debugger server is listening.
 remoteNotificationMessage=S'està escoltant el port %S
+# LOCALIZATION NOTE (remoteStartNotificationTitle): %S is the name of the app.
+# LOCALIZATION NOTE (remoteStartNotificationMessage):
 
 # Helper apps
 helperapps.open=Obre
