[ca] update from Pootle (mobile)

--- a/ca/mobile/android/chrome/browser.properties
+++ b/ca/mobile/android/chrome/browser.properties
@@ -323,7 +323,9 @@ remoteNotificationGenericName=Aplicació
 # the remote debugger server is listening.
 remoteNotificationMessage=S'està escoltant el port %S
 # LOCALIZATION NOTE (remoteStartNotificationTitle): %S is the name of the app.
+remoteStartNotificationTitle=Activa la depuració per a: %S
 # LOCALIZATION NOTE (remoteStartNotificationMessage):
+remoteStartNotificationMessage=Toqueu per activar el depurador remot
 
 # Helper apps
 helperapps.open=Obre
