--- a/ca/mobile/android/chrome/handling.properties
+++ b/ca/mobile/android/chrome/handling.properties
@@ -2,6 +2,7 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
+download.blocked=No s'ha pogut baixar el fitxer
 protocol.failed=No s'ha trobat cap aplicació per obrir aquest enllaç
 # A very short string shown in the button toast when no application can open the url
 protocol.toast.search=Cerca
