Suggestion from Merike Sell

--- a/et/browser/chrome/browser/loop/loop.properties
+++ b/et/browser/chrome/browser/loop/loop.properties
@@ -268,7 +268,7 @@ powered_by_beforeLogo=Teenust toetab
 powered_by_afterLogo=
 
 feedback_call_experience_heading2=Kuidas sulle vestlus meeldis?
-feedback_what_makes_you_sad=Mis tegi sind kurvaks?
+feedback_what_makes_you_sad=Mis sind kurvastas?
 feedback_thank_you_heading=Täname tagasiside eest!
 feedback_category_audio_quality=Heli kvaliteet
 feedback_category_video_quality=Pildi kvaliteet
