Fixes and suggestions from Marek Laane

--- a/et/browser/chrome/browser/browser.properties
+++ b/et/browser/chrome/browser/browser.properties
@@ -601,7 +601,7 @@ slowStartup.disableNotificationButton.accesskey = R
 # LOCALIZATION NOTE(customizeTips.tip0): %1$S will be replaced with the text defined
 # in customizeTips.tip0.hint, %2$S will be replaced with brandShortName, %3$S will
 # be replaced with a hyperlink containing the text defined in customizeTips.tip0.learnMore.
-customizeTips.tip0 = %1$S: sa võid kohandada %2$Si töötama nii nagu ise soovid. Lihtsalt lohista ükskõik milline ülalolev nupp menüüsse või tööriistaribale. %3$S %2$Si kohandamise kohta.
+customizeTips.tip0 = %1$S: sa võid kohandada %2$Si selliseks, nagu ise soovid. Lihtsalt lohista ükskõik milline ülalolev nupp menüüsse või tööriistaribale. %3$S %2$Si kohandamise kohta.
 customizeTips.tip0.hint = Vihje
 customizeTips.tip0.learnMore = Rohkem teavet
 
