--- a/et/browser/chrome/browser/downloads/downloads.properties
+++ b/et/browser/chrome/browser/downloads/downloads.properties
@@ -59,9 +59,9 @@ blockedUncommon=Selle faili avamine ei pruugi olla ohutu.
 # Note: These strings don't exist in the UI yet.  See bug 1053890.
 unblockHeader=Kas oled kindel, et soovid selle faili blokkimise lõpetada?
 unblockTypeMalware=See fail sisaldab viirust või muud pahavara, mis on sinu arvutile kahjulik.
-unblockTypePotentiallyUnwanted=See fail, mida pakutakse abistava allalaadimisena, teeb ootamatuid muudatusi sinu programmidele ja sätetele.
-unblockTypeUncommon=See fail on alla laaditud tundmatult ja võimalik, et ka ohtlikult veebilehelt ning selle avamine ei pruugi olla ohutu.
-unblockTip=Sa võid otsida alternatiivset allikat, kust see fail alla laadida või proovida seda hiljem uuesti alla laadida.
+unblockTypePotentiallyUnwanted=See fail, mida pakutakse abistava allalaadimisena, teeb ootamatuid muudatusi sinu programmides ja sätetes.
+unblockTypeUncommon=See fail on alla laaditud tundmatult ja võib-olla lausa ohtlikult veebilehelt ning selle avamine ei pruugi olla ohutu.
+unblockTip=Sa võid otsida alternatiivset allikat, kust see fail alla laadida, või proovida seda hiljem uuesti alla laadida.
 unblockButtonContinue=Lõpeta blokkimine
 unblockButtonCancel=Jätka blokkimist
 
