--- a/et/browser/chrome/browser/loop/loop.properties
+++ b/et/browser/chrome/browser/loop/loop.properties
@@ -65,7 +65,7 @@ retry_button=Proovi uuesti
 share_email_subject4={{clientShortname}} — liitu vestlusega
 ## LOCALIZATION NOTE (share_email_body4): In this item, don't translate the
 ## part between {{..}} and leave the \r\n\r\n part alone
-share_email_body4=Tere!\r\n\r\nLiitu minuga videovestluses kasutades {{clientShortName}}t:\r\n\r\nSa ei pea alla laadima ega paigaldama mitte midagi. Lihtsalt kopeeri järgnev aadress oma brauserisse:\r\n\r\n{{callUrl}}\r\n\r\nSoovi korral võid {{clientShortname}} kohta juurde lugeda aadressilt {{learnMoreUrl}}\r\n\r\nSuhtleme peagi!
+share_email_body4=Tere!\r\n\r\nLiitu minuga videovestluses {{clientShortName}} vahendusel:\r\n\r\nSa ei pea midagi alla laadima ega paigaldama. Lihtsalt kopeeri järgnev aadress oma brauserisse:\r\n\r\n{{callUrl}}\r\n\r\nSoovi korral võid {{clientShortname}} kohta juurde lugeda aadressilt {{learnMoreUrl}}\r\n\r\nSuhtleme peagi!
 share_button=E-kiri
 share_button2=Saada link e-kirjaga
 copy_url_button=Kopeeri
@@ -186,7 +186,7 @@ video_call_menu_button=Videovestlus
 
 # Conversation Window Strings
 
-initiate_call_button_label2=Valmis vestluse alustamiseks?
+initiate_call_button_label2=Valmis vestlust alustama?
 incoming_call_title2=Vestluse alustamise soov
 incoming_call_accept_button=Võta vastu
 incoming_call_accept_audio_only_tooltip=Võta vastu ainult heliga
