--- a/et/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/et/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -107,7 +107,7 @@ panic-button.label = Unusta
 panic-button.tooltiptext = Unusta mingi osa lehitsemise ajaloost
 
 web-apps-button.label = Rakendused
-web-apps-button.tooltiptext = Avasta rakendused
+web-apps-button.tooltiptext = Tutvu rakendustega
 
 # LOCALIZATION NOTE(devtools-webide-button.label, devtools-webide-button.tooltiptext):
 # widget is only visible after WebIDE has been started once (Tools > Web Developers > WebIDE)
