--- a/et/toolkit/chrome/global/autocomplete.properties
+++ b/et/toolkit/chrome/global/autocomplete.properties
@@ -5,12 +5,12 @@
 # LOCALIZATION NOTE (searchWithEngine): %S will be replaced with
 # the search engine provider's name. This format was chosen because
 # the provider can also end with "Search" (e.g.: MSN Search).
-searchWithEngine = Otsi kasutades otsingumootorit %S
+searchWithEngine = Otsi otsingumootoriga %S
 # LOCALIZATION NOTE (searchWithEngineForQuery):
 # %1$S is the search engine's name, %2$S is the search query.
 # This format was chosen because the provider can also end with "Search"
 # (e.g.: MSN Search).
-searchWithEngineForQuery = %2$S — otsi kasutades otsingumootorit %1$S 
+searchWithEngineForQuery = %2$S — otsi otsingumootoriga %1$S 
 switchToTab = Vaheta kaarti
 # LOCALIZATION NOTE (visitURL):
 # %S is the URL to visit.
