--- a/sq/mobile/android/chrome/browser.properties
+++ b/sq/mobile/android/chrome/browser.properties
@@ -161,7 +161,7 @@ newprivatetabpopup.opened=U hap skedë e re private;U hapën #1 skeda të reja p
 
 # LOCALIZATION NOTE (newtabpopup.switch): Ideally, this string is short (it's a
 # button label) and upper-case, to match Google and Android's convention.
-#newtabpopup.switch=SWITCH
+newtabpopup.switch=KALO
 
 # Undo close tab toast
 # LOCALIZATION NOTE (undoCloseToast.message): This message appears in a toast
