--- a/sq/mobile/android/chrome/browser.properties
+++ b/sq/mobile/android/chrome/browser.properties
@@ -7,7 +7,6 @@ addonsConfirmInstall.install=Instaloje
 
 # Alerts
 alertAddonsDownloading=Shkarkim shtese
-alertAddonsInstalledNoRestart=Instalim i plotësuar
 alertAddonsFail=Instalimi dështoi
 alertAddonsInstalledNoRestart.message=Instalim i plotë
 
@@ -162,7 +161,7 @@ newprivatetabpopup.opened=U hap skedë e re private;U hapën #1 skeda të reja p
 
 # LOCALIZATION NOTE (newtabpopup.switch): Ideally, this string is short (it's a
 # button label) and upper-case, to match Google and Android's convention.
-#newtabpopup.switch=SWITCH
+newtabpopup.switch=KALO
 
 # Undo close tab toast
 # LOCALIZATION NOTE (undoCloseToast.message): This message appears in a toast
@@ -208,15 +207,15 @@ password.dontSave=Mos e ruaj
 # menu, set this to "true". Otherwise, you can leave it as "false".
 browser.menu.showCharacterEncoding=false
 
-# LOCALIZATION NOTE (intl.charsetmenu.browser.static): Set to a series of comma separated
-# values for charsets that the user can select from in the Character Encoding menu.
-intl.charsetmenu.browser.static=iso-8859-1,utf-8,big5,iso-2022-jp,shift_jis,euc-jp
-
 # Text Selection
 selectionHelper.textCopied=Teksti u kopjua në të papastër
 
 # Casting
-#casting.prompt=Cast to Device
+# LOCALIZATION NOTE (casting.sendToDevice): Label that will be used in the
+# dialog/prompt.
+casting.sendToDevice=Dërgoje në Pajisje
+# casting.mirrorTab=Mirror Tab
+# casting.mirrorTabStop=Stop Mirror
 
 # Context menu
 contextmenu.openInNewTab=Hapeni Lidhjen Në Skedë të Re
@@ -285,16 +284,6 @@ timer.start=%S: kohëmatësi filloi
 # %1$S=name of timer, %2$S=number of milliseconds
 timer.end=%1$S: %2$Sms
 
-# Webapps
-webapps.installTitle=Instalojeni Zbatimin
-webapps.alertSuccess=U instalua me sukses
-# Shown when there is a generic problem installing an app
-webapps.installError=Gabim në instalimin e zbatimit
-# Shown when there is something wrong with an apps manifest
-webapps.manifestInstallError=Manifest i pavlefshëm zbatimi
-# Shown when a network error prevented installing an app
-webapps.networkInstallError=Nuk u shkarkua dot manifesti
-
 # Click to play plugins
 clickToPlayPlugins.message2=%S përmban lëndë shtojce. Dëshironi të aktivizohet?
 clickToPlayPlugins.activate=Aktivizoje
@@ -333,6 +322,10 @@ remoteNotificationGenericName=Zbatim
 # LOCALIZATION NOTE (remoteNotificationMessage): %S is the port on which
 # the remote debugger server is listening.
 remoteNotificationMessage=Po dëgjohet tek porta %S
+# LOCALIZATION NOTE (remoteStartNotificationTitle): %S is the name of the app.
+remoteStartNotificationTitle=Aktivizoni diagnostikimin për %S
+# LOCALIZATION NOTE (remoteStartNotificationMessage):
+remoteStartNotificationMessage=Prekeni që të aktivizohet diagnostikuesi i largët debugger
 
 # Helper apps
 helperapps.open=Hape
