--- a/sq/mobile/android/chrome/webapp.properties
+++ b/sq/mobile/android/chrome/webapp.properties
@@ -56,4 +56,4 @@ retrievalFailedTitle=Dështoi #1 përditësim;Dështuan #1 përditësime
 # example: Failed to retrieve updates for Foo, Bar, Baz
 retrievalFailedMessage=Dështoi në marrjen e përditësimit për %1$S;Dështoi në marrjen e përditësimeve për %1$S
 
-webappsDisabledInGuest=Instalimi i zbatimeve është i çaktivizuar për sesione mysafiri
+webappsDisabled=Instalimi i zbatimeve është i çaktivizuar
