--- a/sq/toolkit/chrome/global/resetProfile.properties
+++ b/sq/toolkit/chrome/global/resetProfile.properties
@@ -8,5 +8,5 @@
 resetUnusedProfile.message=Duket sikur u bënë kohë që nuk e keni nisur %S-in. Doni ta pastroni, për një fillim të freskët, thuajse nga e para? Dhe, meqë jemi, mirë se u kthyet!
 
 # LOCALIZATION NOTE (refreshProfile.resetButton.label): %S is brandShortName.
-resetProfile.resetButton.label=Rifreskojeni %S-in…
-resetProfile.resetButton.accesskey=R
+refreshProfile.resetButton.label=Rifreskojeni %S-in…
+refreshProfile.resetButton.accesskey=R
